--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "homepage": "https://herrkutt.github.io/KarateScorer",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:css": "npx tailwindcss -i ./src/index.css -o ./src/output.css",
+    "start": "npm run build:css && react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "gh-pages": "^5.0.0"
   },
   "browserslist": {
